--- a/home.html
+++ b/home.html
@@ -2,6 +2,6 @@
 
 <html>
 
-<a href="https://dashboard.ngrok.com/status/tunnels">click to go to tunnel</a>
+<a href="https://dashboard.ngrok.com/status/tunnels">START SERVERMU!</a>
 
 </html>
